--- a/src/main/resources/templates/adminpage.html
+++ b/src/main/resources/templates/adminpage.html
@@ -12,7 +12,7 @@
         <th>Message Id</th>
         <th>English Message</th>
         <th>Message Name</th>
-        <th></th>
+        <th>Delete</th>
     </tr>
     <tr th:each="message : ${messages}">
         <td th:text="${message.getId()}">1</td>
@@ -24,6 +24,84 @@
             </a></td>
     </tr>
 </table>
+
+<hr/>
+<h4>Student Table</h4>
+
+<table>
+    <tr>
+        <th>Student Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Grade Level</th>
+        <th>School Name</th>
+        <th>Parent Id</th>
+        <th>Delete</th>
+    </tr>
+    <tr th:each="student : ${students}">
+        <td th:value="${student.getId()}"></td>
+        <td th:value="${student.getStudentFirstName()}"></td>
+        <td th:value="${student.getStudentLastName()}"></td>
+        <td th:value="${student.getGrade()}"></td>
+        <td th:value="${student.getSchool()}"></td>
+        <td th:value="${student.getParent().getId()}"></td>
+        <td><a href="adminPage.html" th:href="@{'/deleteStudent?studentId=' + ${student.getId()}}">
+            DELETE-ME
+        </a></td>
+    </tr>
+
+</table>
+
+<hr/>
+<h4>Parent Table</h4>
+
+<table>
+    <tr>
+        <th>Parent Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+        <th>Delete</th>
+
+    </tr>
+    <tr th:each="parent : ${parents}">
+        <td th:value="${parent.getId()}"></td>
+        <td th:value="${parent.getPrimaryFirstName()}"></td>
+        <td th:value="${parent.getPrimaryLastName()}"></td>
+        <td th:value="${parent.getPrimaryEmail()}"></td>
+        <td><a href="adminPage.html" th:href="@{'/deleteparent?parentId=' + ${parent.getId()}}">
+            DELETE-ME
+        </a></td>
+    </tr>
+
+</table>
+
+<hr/>
+<h4>Teacher Table</h4>
+
+<table>
+    <tr>
+        <th>Teacher Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+        <th>Delete</th>
+
+    </tr>
+    <tr th:each="teacher : ${teachers}">
+        <td th:value="${teacher.getId()}"></td>
+        <td th:value="${teacher.getFirstName()}"></td>
+        <td th:value="${teacher.getLastName()}"></td>
+        <td th:value="${teacher.getEmail()}"></td>
+        <td><a href="adminPage.html" th:href="@{'/deleteTeacher?teacherId=' + ${teacher.getId()}}">
+            DELETE-ME
+        </a></td>
+    </tr>
+
+</table>
+
+
+
 
 </body>
 </html>
